popups overflow fix - auto

--- a/src/scss/components/_mobile_menu.scss
+++ b/src/scss/components/_mobile_menu.scss
@@ -16,7 +16,7 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
-        overflow: scroll;
+        overflow: auto;
         @media (max-width: 568px) {
             width: 320px;
             left: -320px;
