--- a/src/scss/pages/news/components/_new_modal.scss
+++ b/src/scss/pages/news/components/_new_modal.scss
@@ -16,7 +16,7 @@
         position: relative;
         width: 80%;
         max-height: 80%;
-        overflow-y: scroll;
+        overflow-y: auto;
         margin: auto;
         padding: 30px;
         background: var(--white);
